--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/mcd500/freedom-u540-c000-bootloader.git
 [submodule "bootrom/keystone-freedom-u540-c000-bootloader"]
 	path = bootrom/keystone-freedom-u540-c000-bootloader
-	url = https://github.com/mcd500/freedom.git
+	url = https://github.com/mcd500/keystone-freedom-u540-c000-bootloader.git
