--- a/bootrom/sdboot-gpt/Makefile
+++ b/bootrom/sdboot-gpt/Makefile
@@ -1,54 +1,110 @@
-# RISCV environment variable must be set
+# Copyright (c) 2018 SiFive, Inc
+# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: GPL-2.0-or-later
+# See the file LICENSE for further information
 
-CC=$(RISCV)/bin/riscv64-unknown-elf-gcc
-OBJCOPY=$(RISCV)/bin/riscv64-unknown-elf-objcopy
-CFLAGS=-march=rv64imac -mcmodel=medany -O2 -std=gnu11 -Wall -nostartfiles 
-CFLAGS+= -fno-common -g -DENTROPY=0 -mabi=lp64 -DNONSMP_HART=0 
-CFLAGS+= -I $(BOOTROM_DIR)/include -I.
-LFLAGS=-static -nostdlib -L $(BOOTROM_DIR)/linker -T sdboot.elf.lds
+CROSSCOMPILE?=riscv64-unknown-elf-
+CC=${CROSSCOMPILE}gcc
+LD=${CROSSCOMPILE}ld
+OBJCOPY=${CROSSCOMPILE}objcopy
+OBJDUMP=${CROSSCOMPILE}objdump
+CFLAGS=-I. -O2 -ggdb -march=rv64imafdc -mabi=lp64d -Wall -mcmodel=medany -mexplicit-relocs
+CCASFLAGS=-I. -mcmodel=medany -mexplicit-relocs
+LDFLAGS=-nostdlib -nostartfiles
 
-dts := $(BUILD_DIR)/$(CONFIG_PROJECT).$(CONFIG).dts
-dtb := $(BUILD_DIR)/$(CONFIG_PROJECT).$(CONFIG).dtb
-clk := $(BUILD_DIR)/$(CONFIG_PROJECT).$(CONFIG).tl_clock.h
+# This is broken up to match the order in the original zsbl
+# clkutils.o is there to match original zsbl, may not be needed
+LIB_ZS1_O=\
+	spi/spi.o \
+	uart/uart.o \
+	lib/version.o
 
-$(clk): $(dts)
-	awk '/tlclk {/ && !f{f=1; next}; f && match($$0, /^.*clock-frequency.*<(.*)>.*/, arr) { print "#define TL_CLK " arr[1] "UL"}' $< > $@.tmp
-	mv $@.tmp $@
+LIB_ZS2_O=\
+	clkutils/clkutils.o \
+	gpt/gpt.o \
+	lib/memcpy.o \
+	sd/sd.o \
 
-$(dtb): $(dts)
-	dtc -I dts -O dtb -o $@ $<
+LIB_FS_O= \
+	fsbl/start.o \
+	fsbl/main.o \
+	$(LIB_ZS1_O) \
+	ememoryotp/ememoryotp.o \
+	fsbl/ux00boot.o \
+	clkutils/clkutils.o \
+	gpt/gpt.o \
+	fdt/fdt.o \
+	sd/sd.o \
+	lib/memcpy.o \
+	lib/memset.o \
+	lib/strcmp.o \
+	lib/strlen.o \
+	fsbl/dtb.o \
 
-.PHONY: dtb
-dtb: $(dtb)
+LIB_FS_1= \
+	fsbl/start.o \
+	fsbl/main.o \
+	$(LIB_ZS1_O) \
+	fsbl/ux00boot.o \
+	clkutils/clkutils.o \
+	gpt/gpt.o \
+	fdt/fdt.o \
+	sd/sd.o \
+	lib/memcpy.o \
+	lib/memset.o \
+	lib/strcmp.o \
+	lib/strlen.o \
+	fsbl/dtb.o \
+	
 
-elf := $(BUILD_DIR)/sdboot.elf
-$(elf): $(dtb) head.S kprintf.c sd.c $(clk)
-	$(CC) $(CFLAGS) -include $(clk) -DDEVICE_TREE='"$(dtb)"' $(LFLAGS) -o $@ head.S sd.c kprintf.c
+H=$(wildcard *.h */*.h)
 
-.PHONY: elf
-elf: $(elf)
+all: zsbl.bin fsbl.bin
 
-bin := $(BUILD_DIR)/sdboot.bin
-$(bin): $(elf)
-	$(OBJCOPY) -O binary $< $@
+elf: zsbl.elf fsbl.elf
 
-.PHONY: bin
-bin: $(bin)
+asm: zsbl.asm fsbl.asm
 
-hex := $(BUILD_DIR)/sdboot.hex
-$(hex): $(bin)
-	od -t x4 -An -w4 -v $< > $@
+lib/version.c: .git/HEAD .git/index
+	echo "const char *gitid = \"$(shell git describe --always --dirty)\";" > lib/version.c
+	echo "const char *gitdate = \"$(shell git log -n 1 --date=short --format=format:"%ad.%h" HEAD)\";" >> lib/version.c
+	echo "const char *gitversion = \"$(shell git rev-parse HEAD)\";" >> lib/version.c
+#	echo "const char *gitstatus = \"$(shell git status -s )\";" >> lib/version.c
 
-.PHONY: hex
-hex: $(hex)
+zsbl/ux00boot.o: ux00boot/ux00boot.c
+	$(CC) $(CFLAGS) -DUX00BOOT_BOOT_STAGE=0 -c -o $@ $^
 
-romgen := $(BUILD_DIR)/rom.v
-$(romgen): $(hex)
-	$(rocketchip_dir)/scripts/vlsi_rom_gen $(ROMCONF) $< > $@
+zsbl.elf: zsbl/start.o zsbl/main.o $(LIB_ZS1_O) zsbl/ux00boot.o $(LIB_ZS2_O) ux00_zsbl.lds
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $(filter %.o,$^) -T$(filter %.lds,$^)
 
-.PHONY: romgen
-romgen: $(romgen)
+fsbl/ux00boot.o: ux00boot/ux00boot.c
+	$(CC) $(CFLAGS) -DUX00BOOT_BOOT_STAGE=1 -c -o $@ $^
 
-.PHONY: clean
+fsbl.elf: $(LIB_FS_O) ux00_fsbl.lds
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $(filter %.o,$^) -T$(filter %.lds,$^)
+
+fsbl/dtb.o: fsbl/ux00_fsbl.dtb
+
+zsbl/start.o: zsbl/ux00_zsbl.dtb
+
+vc707fsbl: $(LIB_FS_1) ux00_fsbl.lds
+	$(CC) $(CFLAGS) $(LDFLAGS) -o vc707fsbl.elf $(filter %.o,$^) -T$(filter %.lds,$^)
+	$(OBJCOPY) -O binary vc707fsbl.elf vc707fsbl.bin
+
+%.bin: %.elf
+	$(OBJCOPY) -O binary $^ $@
+
+%.asm: %.elf
+	$(OBJDUMP) -S $^ > $@
+
+%.dtb: %.dts
+	dtc $^ -o $@ -O dtb
+
+%.o: %.S
+	$(CC) $(CFLAGS) $(CCASFLAGS) -c $< -o $@
+
+%.o: %.c $(H)
+	$(CC) $(CFLAGS) -o $@ -c $<
+
 clean::
-	rm -rf $(hex) $(elf)
+	rm -f */*.o */*.dtb zsbl.bin zsbl.elf zsbl.asm fsbl.bin fsbl.elf fsbl.asm vc707fsbl.elf vc707fsbl.bin lib/version.c
